crates/weft-snapshots/tests/snapshots/lit-js/corpus-account.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-account as lit-js
---
import { LitElement, html, nothing } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

function _float(v) {
  return /^-?(?:\d+(?:\.\d+)?|\.\d+)(?:[eE][-+]?\d+)?$/.test(v) ? v : "";
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="account" aria-label="Edit account"
      ><h1 data-weft-id="title">Edit account</h1
      ><form data-weft-id="account-form" data-state="invalid" aria-label="Account" @submit=${(_e) => { _e.preventDefault(); _act(actions, { id: "account-form", action: "account.save" }); }}
        ><div data-weft-field=""
          ><label
            ><span aria-hidden="true">Full name</span
            ><input data-weft-id="name" data-state="valid" aria-label="Full name" type="text" placeholder="Ada Lovelace" .value=${_text(data?.account?.name)} @input=${(_e) => { onChange?.("$.account.name", _e.currentTarget.value); _act(actions, { id: "name", action: "account.edit" }); }}
          ></label
        ></div
        ><div data-weft-field=""
          ><label
            ><span aria-hidden="true">Age</span
            ><input data-weft-id="age" data-state="invalid" aria-label="Age" type="number" aria-invalid=${"invalid" === "invalid" || _text(data?.errors?.age) !== "" ? "true" : undefined} aria-describedby=${(_text(data?.errors?.age) ? "weft-age-error" : undefined) ?? nothing} .value=${_float(_text(data?.account?.age))} @input=${(_e) => onChange?.("$.account.age", _e.currentTarget.value)}
          ></label>${_text(data?.errors?.age) ? html`<div id=${"weft-age-error"}>${_text(data?.errors?.age)}</div>` : null}</div
        ><div data-weft-field=""
          ><label
            ><span aria-hidden="true">Handle</span
            ><input data-weft-id="handle" aria-label="Handle" type="text" placeholder=${"{handle}"} ?disabled=${_on(data?.account?.locked)} .value=${_text(data?.account?.handle)} @input=${(_e) => onChange?.("$.account.handle", _e.currentTarget.value)}
          ></label
        ></div
        ><div data-weft-field=""
          ><label
            ><span aria-hidden="true">Bio</span
            ><textarea data-weft-id="bio" aria-label="Bio" .value=${_text(data?.account?.bio)} @input=${(_e) => onChange?.("$.account.bio", _e.currentTarget.value)}></textarea
          ></label
        ></div
        ><div data-weft-field=""
          ><label
            ><span aria-hidden="true">Email</span
            ><input data-weft-id="email" aria-label="Email" type="email" disabled .value=${_text(data?.account?.email)} @input=${(_e) => onChange?.("$.account.email", _e.currentTarget.value)}
          ></label
        ></div
        ><label
          ><input data-weft-id="newsletter" type="checkbox" aria-label="Send me the newsletter" .checked=${_on(data?.account?.newsletter)} @change=${(_e) => { onChange?.("$.account.newsletter", _e.currentTarget.checked); _act(actions, { id: "newsletter", action: "account.edit" }); }}
          ><span aria-hidden="true">Send me the newsletter</span
        ></label
        ><label
          ><input data-weft-id="terms" type="checkbox" aria-label="Terms accepted" disabled checked
          ><span aria-hidden="true">Terms accepted</span
        ></label
        ><label
          ><input data-weft-id="public" type="checkbox" role="switch" aria-label="Public profile" ?disabled=${!_on(data?.account?.verified)} .checked=${_on(data?.account?.public)} @change=${(_e) => { onChange?.("$.account.public", _e.currentTarget.checked); _act(actions, { id: "public", action: "account.edit" }); }}
          ><span aria-hidden="true">Public profile</span
        ></label
        ><div data-weft-id="plan" aria-label="Plan" role="radiogroup"
          ><span aria-hidden="true">Plan</span
          ><label
            ><input data-weft-id="plan-free" type="radio" name=${"weft-plan"} value="free" aria-label="Free" .checked=${_text(data?.account?.plan) !== "" && "free" === _text(data?.account?.plan)} @change=${() => { onChange?.("$.account.plan", "free"); _act(actions, { id: "plan", action: "account.edit" }); }}
            ><span aria-hidden="true">Free</span
          ></label
          ><label
            ><input data-weft-id="plan-pro" type="radio" name=${"weft-plan"} value="pro" aria-label=${"" || !(_text(data?.labels?.pro).trim() === "") ? _squash(_text(data?.labels?.pro)) : ""} .checked=${_text(data?.account?.plan) !== "" && "pro" === _text(data?.account?.plan)} @change=${() => { onChange?.("$.account.plan", "pro"); _act(actions, { id: "plan", action: "account.edit" }); }}
            ><span aria-hidden="true">${!(_text(data?.labels?.pro).trim() === "") ? _squash(_text(data?.labels?.pro)) : "" || ""}</span
          ></label
          ><label
            ><input data-weft-id="plan-team" type="radio" name=${"weft-plan"} value="team" aria-label="Team" disabled .checked=${_text(data?.account?.plan) !== "" && "team" === _text(data?.account?.plan)} @change=${() => { onChange?.("$.account.plan", "team"); _act(actions, { id: "plan", action: "account.edit" }); }}
            ><span aria-hidden="true">Team</span
          ></label
        ></div
        ><label
          ><span aria-hidden="true">Language</span>${(() => {
            const _o = [
              { value: "en", el: html`<option data-weft-id="language-en" ?selected=${"en" === _text(data?.account?.language)} value="en">English</option>` },
              { value: "fr", el: html`<option data-weft-id="language-fr" ?selected=${"fr" === _text(data?.account?.language)} value="fr">${!(_text(data?.labels?.french).trim() === "") ? _squash(_text(data?.labels?.french)) : ""}</option>` },
            ];
            return html`<select data-weft-id="language" aria-label="Language" ?disabled=${_on(data?.account?.locked)} .value=${_text(data?.account?.language)} @change=${(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); onChange?.("$.account.language", _c ? _c.value : _e.currentTarget.value); _act(actions, { id: "language", action: "account.edit" }); }}>${_o.map((_x) => _x.el)}</select>`;
          })()}</label>${!!_on(data?.saved) ? html`<div data-weft-id="saved" role="alert" data-tone="success">Your changes were saved.</div>` : null}<div data-weft-slot="footer"
          ><button data-weft-id="save" data-state="busy" aria-busy="true" type="submit" data-variant="primary" @click=${(_e) => { _e.preventDefault(); _act(actions, { id: "account-form", action: "account.save" }); }}>Save</button
          ><button data-weft-id="cancel" data-state="idle" type="button" data-variant="secondary" @click=${(_e) => _act(actions, { id: "cancel", action: "account.cancel" })}>${!(_text(data?.labels?.cancel).trim() === "") ? _squash(_text(data?.labels?.cancel)) : ""}</button>${(() => {
            const _href = _url("https://example.com/help");
            return html`<a data-weft-id="help" href=${(_href) ?? nothing} role=${(_href === undefined ? "link" : undefined) ?? nothing} tabindex=${(_href === undefined ? 0 : undefined) ?? nothing} style=${styleMap({ display: "inline-block" })}>${!(_text(data?.labels?.help).trim() === "") ? _squash(_text(data?.labels?.help)) : ""}</a>`;
          })()}</div
      ></form
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
